<resources>
    <string name="app_name">TestSend</string>

    <string name="app_version">V 1.0.0</string>
    <string name="company_name">DENTASOFT</string>
    <string name="company_name_copyright">\u00A9 DENTASOFT</string>

    <string name="banner_message">Pourquoi nous choisir pour votre futur logiciel?</string>

    <string name="happy_customer">Happy Customers</string>
    <string name="sms_users">SMS Users</string>
    <string name="project_in_dev">Projects in dev.</string>

    <string name="company_details_title_1">CONSULTANCE</string>
    <string name="company_details_subtitle_1">Désireux de démarrer un nouveau project informatique?\n DentaSoft vous aide à définir vos besoins</string>
    <string name="company_details_title_2">DEVELOPPEMENT</string>
    <string name="company_details_subtitle_2">blabal</string>
    <string name="company_details_title_3">SUPPORT</string>
    <string name="company_details_subtitle_3">blablalba</string>

    <string name="nav_open">Open nav</string>
    <string name="nav_close">Close nav</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_my_account">Mon compte</string>

    <string name="general">General</string>
    <string name="save">Save</string>
    <string name="my_account_txt_identifier">Your identifier:</string>
    <string name="quit">Quit</string>
    <string name="send_sms">Send SMS</string>

    <string name="toast_message_date_invalid">Please fill in both date ranges!</string>

</resources>
