<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:title="Général" >
        <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home"
                    />
                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/menu_history" />
                <item
                    android:id="@+id/nav_statistics"
                    android:icon="@drawable/ic_statistics"
                    android:title="@string/menu_statistics" />

        </menu>
    </item>
    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
        </menu>
    </item>
    <item android:title="@string/menu_my_account">
        <menu>
            <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/ic_users"

                android:title="@string/menu_my_account" />
        </menu>
    </item>
</menu>