<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_users"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/my_account_txt_identifier" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/my_account_edit_identifier"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:orientation="horizontal"
         android:weightSum="4"
         android:elevation="2dp"
       android:background="@color/white"
         >
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="12dp"
             android:id="@+id/my_account_save_button"
             android:layout_weight="1"
             android:text="@string/save" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:id="@+id/my_account_sms_button"

             android:text="@string/send_sms" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:id="@+id/my_account_quit_button"
             android:text="@string/quit" />
     </LinearLayout>


</LinearLayout>
